adding new image meta

--- a/public/index.html
+++ b/public/index.html
@@ -18,15 +18,15 @@
     <meta property="og:description" content="Simply tap to copy or pin your favorite Kaomoji" />
     <meta property="og:url" content="https://imdbsd.github.io/kaomoji" />
     <meta property="og:site_name" content="Kaomoji" />
-    <meta property="og:image" content="https://github.com/imdbsd/kaomoji/blob/master/screenshoot/kaomoji-images.jpg" />
-    <meta property="og:image:secure_url" content="https://github.com/imdbsd/kaomoji/blob/master/screenshoot/kaomoji-images.jpg" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/imdbsd/kaomoji/master/screenshoot/kaomoji-images.jpg" />
+    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/imdbsd/kaomoji/master/screenshoot/kaomoji-images.jpg" />
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="1280" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:description" content="Simply tap to copy or pin your favorite Kaomoji" />
     <meta name="twitter:title" content="Kaomoji by imdbsd" />
     <meta name="twitter:site" content="@Budisuryadarma" />
-    <meta name="twitter:image" content="https://github.com/imdbsd/kaomoji/blob/master/screenshoot/kaomoji-images.jpg" />
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/imdbsd/kaomoji/master/screenshoot/kaomoji-images.jpg" />
     <meta name="twitter:creator" content="@Budisuryadarma" />
     <!--
       manifest.json provides metadata used when your web app is added to the
